fixing contrast errors and footer wireframe

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -11,10 +11,10 @@
     --heading-font: 'Source Serif 4', serif;
     --paragraph-font: 'Poppins-regular', sans-serif;
 
-    --nav-background-color: #447A9C;
+    --nav-background-color: #99D4D6;
     --nav-link-color: #F1FAEE;
     --nav-hover-link-color: #14253E;
-    --nav-hover-background-color: #99D4D6;
+    --nav-hover-background-color: #F1FAEE;
 }
 
 /* header and navigation */
@@ -42,7 +42,7 @@ header img {
 
 header {
     padding: 15px;
-    background-color: var(--accent2-color);
+    background-color: var(--accent3-color);
     color: var(--primary-color)
 }
 
@@ -181,8 +181,8 @@ footer {
     grid-template-columns: auto auto auto auto auto;
     margin-top: 2rem;
     align-items: center;
-    background-color: var(--accent2-color);
-    color: var(--primary-color);
+    background-color: var(--accent3-color);
+    color: var(--primary2-color);
 }
 
 .socaillinks {
@@ -476,10 +476,10 @@ th {
 
 footer a:link {
     text-decoration: none;
-    color: var(--nav-link-color);
+    color: var(--nav-hover-link-color);
   }
 
 footer a:visited {
   text-decoration: none;
-  color: var(--nav-link-color);
+  color: var(--nav-hover-link-color);
 }
